--- a/views/paso2.html
+++ b/views/paso2.html
@@ -21,9 +21,8 @@
             <li><a href="/Index.html"><i class="fas fa-home"></i> Volver al Inicio</a></li>
             <li><a href="#" onclick="cerrarSesion(); return false;"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</a></li>
             <li><hr></li>
-            <li><a href="/paso1.html"><i class="fas fa-lock"></i> Acceso</a></li>
-            <li><a href="/paso2.html"><i class="fas fa-edit"></i> Captura de Datos</a></li>
-            <li><a href="/paso3.html"><i class="fas fa-check"></i> Finalizar</a></li>
+            <li><a href="/paso1.html"><i class="fas fa-lock"></i> Buscar Caso</a></li>
+            <li><a href="/casos-inspeccionados.html"><i class="fas fa-list-alt"></i> Casos Inspeccionados</a></li>
             <li><hr></li>
             <li><a href="/about.html"><i class="fas fa-info-circle"></i> Sobre la Aplicación</a></li>
             <li><a href="/config.html"><i class="fas fa-cog"></i> Configuración</a></li>
