--- a/views/paso1.html
+++ b/views/paso1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceso - Inspector Digital</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="sidebar-overlay" id="sidebarOverlay"></div>
@@ -69,8 +69,12 @@
         </div>
     </div>
 
-    <script src="/script.js"></script>
-    <script>
+    <script type="module" src="/js/main.js"></script>
+    <script type="module">
+        import { verificarSesion } from './js/modules/auth.js';
+        import { mostrarMensaje } from './js/modules/ui.js';
+
+        // Verificar sesión al cargar
         verificarSesion();
 
         document.getElementById('accesoForm').addEventListener('submit', async (e) => {
