--- a/views/Index.html
+++ b/views/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspector Digital - Sistema de Siniestros</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="sidebar-overlay" id="sidebarOverlay"></div>
@@ -69,6 +69,6 @@
         </div>
     </div>
 
-    <script src="/script.js"></script>
+    <script type="module" src="/js/main.js"></script>
 </body>
 </html>
