--- a/views/casos-inspeccionados.html
+++ b/views/casos-inspeccionados.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casos Inspeccionados - Inspector Digital</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <style>
         .table-container {
             width: 100%;
@@ -215,8 +215,10 @@
         </div>
     </div>
 
-    <script src="/script.js"></script>
-    <script>
+    <script type="module" src="/js/main.js"></script>
+    <script type="module">
+        import { verificarSesion } from './js/modules/auth.js';
+
         verificarSesion();
 
         document.addEventListener('DOMContentLoaded', cargarCasosInspeccionados);
