--- a/views/casos-inspeccionados.html
+++ b/views/casos-inspeccionados.html
@@ -217,7 +217,7 @@
 
     <script type="module" src="/js/main.js"></script>
     <script type="module">
-        import { verificarSesion } from './js/modules/auth.js';
+        import { verificarSesion } from '/js/modules/auth.js';
 
         verificarSesion();
 
