--- a/views/config.html
+++ b/views/config.html
@@ -90,7 +90,7 @@
 
     <script type="module" src="/js/main.js"></script>
     <script type="module">
-        import { mostrarMensaje } from './js/modules/ui.js';
+        import { mostrarMensaje } from '/js/modules/ui.js';
         
         document.addEventListener('DOMContentLoaded', () => {
             document.getElementById('syncBtn').addEventListener('click', (e) => {
