--- a/views/paso3.html
+++ b/views/paso3.html
@@ -89,8 +89,8 @@
 
     <script type="module" src="/js/main.js"></script>
     <script type="module">
-        import { verificarSesion } from './js/modules/auth.js';
-        import { mostrarMensaje, actualizarResumen } from './js/modules/ui.js';
+        import { verificarSesion } from '/js/modules/auth.js';
+        import { mostrarMensaje, actualizarResumen } from '/js/modules/ui.js';
 
         verificarSesion();
 
