--- a/views/paso1.html
+++ b/views/paso1.html
@@ -72,8 +72,8 @@
 
     <script type="module" src="/js/main.js"></script>
     <script type="module">
-        import { verificarSesion } from './js/modules/auth.js';
-        import { mostrarMensaje } from './js/modules/ui.js';
+        import { verificarSesion } from '/js/modules/auth.js';
+        import { mostrarMensaje } from '/js/modules/ui.js';
 
         // Verificar sesión al cargar
         verificarSesion();
