--- a/views/paso2.html
+++ b/views/paso2.html
@@ -182,8 +182,8 @@
 
     <script type="module" src="/js/main.js"></script>
     <script type="module">
-        import { verificarSesion } from './js/modules/auth.js';
-        import { mostrarMensaje } from './js/modules/ui.js';
+        import { verificarSesion } from '/js/modules/auth.js';
+        import { mostrarMensaje } from '/js/modules/ui.js';
 
         verificarSesion();
 
