--- a/views/casos-inspeccionados.html
+++ b/views/casos-inspeccionados.html
@@ -46,7 +46,7 @@
             <section class="tab-content active paso-section">
                 <div class="paso-header">
                     <i class="fas fa-list-alt"></i>
-                    <h2>Casos Inspeccionados</h2>
+                    <h2>Detalle de Casos</h2>
                 </div>
 
                 <div class="casos-stats" id="casosStats">
